--- a/GameDevelopment/asset/css/style.css
+++ b/GameDevelopment/asset/css/style.css
@@ -3,8 +3,10 @@
     margin: 0;
 }
 
-canvas {
-    background: #eee;
-    display: block;
-    margin: 0 auto;
+body {
+width: 100vw;
+height: 100vh;
+display: flex;
+justify-content: center;
+align-items: center;
 }
